--- a/Contact_Info.html
+++ b/Contact_Info.html
@@ -5,6 +5,9 @@
     <title>Severin's Contact Information</title>
   </head>
   <body>
+    <form action="index.html">        
+        <input type="submit" value="Back">
+    </form>
     <center>
       <h1>Contact:</h1>
       <hr />      
