--- a/Hobbies.html
+++ b/Hobbies.html
@@ -5,6 +5,10 @@
     <title>Severin's Hobbies</title>
 </head>
 <body>
+    <form action="index.html">        
+        <input type="submit" value="Back">
+    </form>
+    <center>
     <h1>Hobbies</h1>
     <ol>
         <li>Gaming (duh)</li>
@@ -12,5 +16,6 @@
         <li>PC Hardware</li>
         <li>Fantasy and Sci-Fi Books & Movies</li>
     </ol>
+</center>
 </body>
 </html>
